# interior-furniture-store

./: README.md  pyproject.toml
app/app/: settings.py  urls.py
app/carts/: admin.py  models.py  urls.py  utils.py  views.py
app/carts/migrations/: 0001_initial.py  0002_alter_cart_options.py
app/carts/templatetags/: carts_tags.py
app/fixtures/goods/: cats.json  prods.json
app/goods/: admin.py  models.py  utils.py  views.py
app/goods/migrations/: 0001_initial.py  0002_alter_products_discount_alter_products_price.py  0002_alter_products_price.py  0003_alter_products_price.py
app/goods/templatetags/: goods_tags.py
app/main/: urls.py  views.py
app/orders/: models.py  views.py
app/orders/migrations/: 0001_initial.py  0002_alter_orderitem_price.py  0002_initial.py
app/templates/: base.html
app/templates/includes/: notifications.html  products.html
app/users/: admin.py  forms.py  models.py  urls.py  views.py
app/users/migrations/: 0001_initial.py  0002_user_delivery_address_user_telephone.py  0003_rename_telephone_user_phone_number.py  0004_alter_user_delivery_address_alter_user_phone_number.py  0005_alter_user_phone_number.py
carts/: mixins.py  urls.py  views.py
carts/migrations/: 0002_initial.py
config/: settings.py  urls.py
goods/: urls.py  views.py
goods/migrations/: 0001_initial.py
main/: urls.py  views.py
orders/: admin.py  forms.py  urls.py  utils.py  views.py
templates/: base.html
templates/includes/: notifications.html  products.html
users/: admin.py  forms.py  models.py  urls.py
users/migrations/: 0001_initial.py
(+42 files in other folders)
