[tool.poetry]
name = "store-interior"
version = "0.1.0"
description = ""
authors = ["Anton Pashinov <troxin1988@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.13"
pillow = "^10.3.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.25.0"
django-debug-toolbar = "^4.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
